<resources>
    <string name="app_name">StudIpFileMailer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_file_acitvity">Files</string>
    <string name="title_activity_login">Login</string>

    <!-- FileActivity Ui Strings -->
    <string name="send_to_email_1">Email 1</string>
    <string name="send_to_email_2">Email 2</string>
    <string name="download_locally">Download to device</string>

    <!-- Toasts -->
    <string name="login_successful">Logged in successfully</string>
    <string name="incorrect_credentials">The login credentials are incorrect</string>
    <string name="email_sent">Email was sent</string>

    <!-- Preferences -->
    <!-- Preference Titles -->
    <string name="login_header">StudIp Login Credentials</string>
    <string name="share_header">Share Settings</string>
    <string name="download_header">Sync: Download Settings</string>
    <string name="courses_header">Sync: Course Settings</string>

    <!-- StudIp Preferences -->
    <string name="logged_in_as">Logged in as:</string>
    <string name="not_logged_in">Not logged in!</string>
    <string name="log_out">Logout</string>

    <string name="studIp_username">StudIp Username</string>
    <string name="studIp_password">StudIp Password</string>

    <!-- Email Preferences -->
    <string name="email_address_1_name">Email Address 1</string>
    <string name="email_address_2_name">Email Address 2</string>
    <string name="email_address_invalid">The Email address is invalid</string>
    <string name="sync_email_address">Sync files to this email address</string>

    <!-- Remarkable Preference -->
    <string name="sync_remarkable">Sync files to the remarkable cloud</string>
    <string name="login_remarkable">Login to remarkable</string>
    <string name="remarkable_login_summary">Please generate a one-time code at remarkable.com/#mobile and paste it here</string>
    <string name="remarkable_logged_in">Logged in to reMarkable!</string>
    <string name="remarkable_code_invalid">Code invalid!</string>
    <string name="remarkable_connecting">Connecting…</string>

    <!-- Download Preferences -->
    <string name="download_file_types_name">File types</string>
    <string name="download_file_type_summary">Select which file types to automatically download</string>

    <string name="sync_files_in_the_background">Synchronise files automatically in the background</string>
    <string name="download_local_name">Download files to phone</string>
    <string name="notifications_on_update">Receive notifications for new files</string>
    <string name="download_cellular_name">Automatic downloads without Wifi</string>

    <!-- Courses -->
    <string name="courses_select_name">Select Courses</string>
    <string name="courses_summary">Select for which courses to automatically download files</string>
    <string name="clear_courses">Clear all courses</string>

    <string name="starting_reloading_courses">Reloading courses…</string>

    <!-- Background Worker -->
    <string name="wifi_not_connected">Wifi not connected!</string>
    <string name="sync_in_progress">Updating…</string>

    <!-- Login Activity-->
    <string name="login_in_button">Log in</string>
    <string name="no_internet">No internet!</string>

    <!-- Notifications -->
    <string name="notification_channel_files_title">File Notifications</string>
    <string name="notification_channel_files_description">Information for new files</string>
    <string name="notification_permission_not_given">Notification Permission not given!</string>

    <string name="notification_file_title">File: %s</string>
    <string name="notification_file_body">Course: %s, File Size: %s"</string>
    <string name="notification_download_button">Download</string>

    <string name="downloading_file">Downloading file…</string>
    <string name="sending_email">Sending email…</string>
    <string name="finished_reloading_courses">Reloaded courses. Please reopen!</string>

</resources>